# trade-server

./: Cargo.toml
src/: main.rs
src/app/: main.rs  mod.rs
src/app/features/: mod.rs
src/app/features/user/: mod.rs
src/app/features/user/auth/: mod.rs  service.rs
src/app/features/user/auth/password/: mod.rs  service.rs
src/app/features/user/profile/: mod.rs  service.rs
src/app/shared/: mod.rs
src/app/shared/middlewares/: auth.rs  logging.rs  mod.rs  recovery.rs  request_id.rs
src/app/shared/utils/: config.rs  logger.rs
src/dex/: main.rs
src/dex/features/: mod.rs
src/dex/features/dex/: mod.rs
src/dex/features/dex/bsc/: blockchain_client.rs  mod.rs  service.rs
src/dex/shared/: config.rs
src/dex/shared/data/: mod.rs  state.rs
