[package]
name = "node-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/app/main.rs"

[[bin]]
name = "dex"
path = "src/dex/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-json", "with-rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
futures = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
http = "1.0"
hyper = "1.7.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2.0", features = ["rustls"] }
lapin = "2"
redis = { version = "0.24", features = ["tokio-comp", "streams"] }
tempfile = "3.8"
thiserror = "1.0"
async-trait = "0.1"
tokio-stream = "0.1"
regex = "1.10"
anyhow = "1.0"
rust_decimal = { version = "1", features = ["serde"] }

# Migration crate dependency to run migrations from main
# Migration crate dependency to run migrations from main
model = { path = "packages/model" }
repository = { path = "packages/repository" }

[workspace]
members = [".", "packages/model", "packages/repository"]
